# TemplateStack

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  TemplateStack.h  example.c  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  icon-ci.yaml
assets/icons/: README.md  meson.build
tests/: meson.build
tests/base/: alloc.c  buffer.c  init.c  is-empty-full.c  push-pop-peek.c  size.c
tests/custom-alloc/: custom-malloc-free.c  custom-malloc-realloc-free.c  free.c  malloc-free.c  malloc-realloc-free.c  malloc-realloc.c  malloc.c
tests/default-new-size/: custom-default.c  default-default.c  va.c
tests/fail/: buffer-null.c  null.c
tests/module/: module.c  module.h
tests/static-stack/: buffer.c  diff-sizes.c  init.c  is-empty-full.c  push-pop-peek.c  size.c
tests/types/: names.c  values.c
tools/nodejs/: package-lock.json  package.json
